--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "mongodb": "^2.2.10",
     "mongoose": "^4.6.4",
     "passport": "*",
+    "passport-http": "*",
+    "passport-local": "*",
     "react": "^15.3.2",
     "react-bootstrap": "^0.31.1",
     "react-dom": "^15.3.2",
